fix: premiacoes-wrap max-width:1248px (was 1440px), no side padding
Grid is 1248px centered (96px margins auto). Photo at left:681px
(777-96) top:48px (186-138) within the 1248px container.

--- a/styles.css
+++ b/styles.css
@@ -358,8 +358,8 @@ ul{list-style:none}
 /* Photo: absolute in .premiacoes */
 .premiacoes-photo{
   position:absolute;
-  left:777px;
-  top:186px;
+  left:681px;
+  top:48px;
   width:561px;
   height:auto;
   border-radius:24px;
@@ -373,9 +373,9 @@ ul{list-style:none}
   top:0;left:0;right:0;bottom:0;
   display:flex;
   flex-direction:column;
-  max-width:1440px;
+  max-width:1248px;
   margin:0 auto;
-  padding:138px 101px 200px 96px;
+  padding-top:138px;
   z-index:1;
 }
 
